<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <TextView
        android:id="@+id/sensorname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_name"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/sensor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/sensorname"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sensorRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_range"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_below="@+id/sensor_name"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/sensor_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/sensorRange"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/minDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_min_delay"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_below="@+id/sensor_range"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/sensor_mindelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/minDelay"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/sensorPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_power"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_below="@+id/sensor_mindelay"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/sensor_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/sensorPower"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/sensorSolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_resolution"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_below="@+id/sensor_power"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/sensor_resolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/sensorSolution"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/sensorVendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_vendor"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_below="@+id/sensor_resolution"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sensor_vendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/sensorVendor"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/sensorVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_version"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_below="@+id/sensor_vendor"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/sensor_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/sensorVer"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_sensor_values"
        android:onClick="onClickSensorValues"
        android:layout_below="@+id/sensor_version"
        tools:ignore="UsingOnClickInXml" />

</RelativeLayout>