<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:id="@+id/layout">

    <TextView
        android:id="@+id/sensorname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/sensor_values"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/event0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/sensorname"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/event1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/event0"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/event2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/event1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/event3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/event2"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/event4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/event3"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/event5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/event4"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/event6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/event5"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp" />
    <TextView
        android:layout_below="@+id/event6"
        android:id="@+id/accuracyt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/sensor_accuracy"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/accuracyt"
        android:layout_marginTop="5dp"
        android:text=""
        android:layout_marginLeft="10dp"
        android:textSize="16sp" />
    <TextView
        android:layout_below="@+id/accuracy"
        android:id="@+id/timeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/timestamp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/timeStamp"
        android:layout_marginTop="5dp"
        android:text=""
        android:layout_marginLeft="10dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="145dp"
        android:layout_marginBottom="197dp"
        android:text="@string/back" />

</RelativeLayout>